# src/modules/controllers/shortener.controller.js
@@ -1,5 +1,6 @@
 import CreateShortUrlUseCase from "../usecases/create_short_url.usecase.js";
 import GetOriginalUrlUseCase from "../usecases/get_original_url.usecase.js";
+import GetShortUrlClicksUseCase from "../usecases/get_short_url_clicks.usecase.js";
 
 class ShortenerController {
   static async createShortUrl(req, res, next) {
@@ -27,6 +28,21 @@ class ShortenerController {
       if (!originalUrl) return res.status(404).json({ error: "URL not found" });
 
       res.status(201).json({ originalUrl: originalUrl });
+    } catch (error) {
+      console.error("❌ Controller Error:", error);
+      next(error); // 傳遞錯誤給全局錯誤處理器
+    }
+  }
+
+  static async getClicks(req, res, next) {
+    try {
+      const { shortCode } = req.params;
+      const useCase = new GetShortUrlClicksUseCase();
+      const clicks = await useCase.execute(shortCode);
+
+      if (!clicks) return res.status(404).json({ error: "URL not found" });
+
+      res.status(201).json({ clicks: clicks });
     } catch (error) {
       console.error("❌ Controller Error:", error);
       next(error); // 傳遞錯誤給全局錯誤處理器
